[gd_scene load_steps=2 format=2]

[ext_resource path="res://managers/viewport_manager.gd" type="Script" id=2]

[node name="ViewportManager" type="Node"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerTop" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="ViewportContainerL" type="ViewportContainer" parent="VBoxContainer/HBoxContainerTop"]
margin_right = 1020.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainerM" type="ViewportContainer" parent="VBoxContainer/HBoxContainerTop"]
margin_left = 1022.0
margin_right = 1022.0
margin_bottom = 596.0

[node name="ViewportContainerR" type="ViewportContainer" parent="VBoxContainer/HBoxContainerTop"]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 596.0

[node name="HBoxContainerMiddle" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 598.0
margin_right = 1024.0
margin_bottom = 598.0
custom_constants/separation = 2

[node name="ViewportContainerL" type="ViewportContainer" parent="VBoxContainer/HBoxContainerMiddle"]
margin_right = 1020.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainerM" type="ViewportContainer" parent="VBoxContainer/HBoxContainerMiddle"]
margin_left = 1022.0
margin_right = 1022.0

[node name="ViewportContainerR" type="ViewportContainer" parent="VBoxContainer/HBoxContainerMiddle"]
margin_left = 1024.0
margin_right = 1024.0

[node name="HBoxContainerBottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/HBoxContainerBottom"]

[node name="ViewportContainer2" type="ViewportContainer" parent="VBoxContainer/HBoxContainerBottom"]
margin_left = 2.0
margin_right = 2.0

[node name="ViewportContainer3" type="ViewportContainer" parent="VBoxContainer/HBoxContainerBottom"]
margin_left = 4.0
margin_right = 4.0

[node name="ViewportContainer4" type="ViewportContainer" parent="VBoxContainer/HBoxContainerBottom"]
margin_left = 6.0
margin_right = 6.0

[node name="ViewportContainer5" type="ViewportContainer" parent="VBoxContainer/HBoxContainerBottom"]
margin_left = 8.0
margin_right = 8.0
